--- a/.github/workflows/lab2-workflow.yml
+++ b/.github/workflows/lab2-workflow.yml
@@ -3,9 +3,9 @@ name: Exploring Workflow Dispatch Trigger
 on:
   workflow_dispatch:
     inputs:
-      run-job:
+      run_job:
         type: boolean
-        required: true
+        required: false
         description: 'Run Specific Job'
         
       custom_message:
